style(img projects)

--- a/src/projets/projetbookshelf/projetbookshelf.html
+++ b/src/projets/projetbookshelf/projetbookshelf.html
@@ -3,7 +3,7 @@ title: Conception d'un site de réservation de livres
 layout: projetlayout.html
 ---
 <h2>Conception d'un site de réservation de livres</h2>
-<div id="project-img-wrapper">
+<div class="project-img-wrapper">
     <a target="_blank" href="https://bookshelf.teotimepacreau.fr/"><img src="../../img/bookshelf.png" loading="eager" width="600" height="300" alt="Homepage of the bookshelf organizer website : a friendly UI filled with a list of books"></a>
 </div>
 <h3>Rôle</h3>
@@ -27,27 +27,27 @@ layout: projetlayout.html
     <li><strong>Transfert des données du backend au frontend :</strong> création d'une API d'envoi des données.
 
     <li><strong>Barre de recherche :</strong></li>
-    <div id="project-img-wrapper">
+    <div class="project-img-wrapper">
         <video width="603" height="339" controls muted src="../../img/bookshelf-recherche.mp4" title="Search function"></video>
     </div>
 
     <li><strong>Filtre :</strong> classement des résultats par note moyenne</li>
-    <div id="project-img-wrapper">
+    <div class="project-img-wrapper">
         <video width="603" height="339" controls muted src="../../img/bookshelf-filtre.mp4" title="Filter function"></video>
     </div>
 
     <li><strong>Tri :</strong></li>
-    <div id="project-img-wrapper">
+    <div class="project-img-wrapper">
         <video width="603" height="339" controls muted src="../../img/bookshelf-tri.mp4" title="Filter function"></video>
     </div>
 
     <li><strong>Connexion et ajout de livre :</strong> mise en place d'un système de connexion administrateur. L'administrateur à l'autorisation d'ajouter un livre à la collection via un formulaire.</li>
-    <div id="project-img-wrapper">
+    <div class="project-img-wrapper">
         <video width="603" height="339" controls muted src="../../img/bookshelf-login.mp4" title="Login and adding book"></video>
     </div>
 
     <li><strong>Réservations :</strong> l'utilisateur peut ajouter dans son panier un livre et le réserver en sélectionnant une date de rendu.</li>
-    <div id="project-img-wrapper">
+    <div class="project-img-wrapper">
         <video controls muted src="../../img/bookshelf-reservation.mp4" title="Reservation book"></video>
     </div>
 </ol>
