--- a/src/projets/projetmairies/projetmairies.html
+++ b/src/projets/projetmairies/projetmairies.html
@@ -3,7 +3,7 @@ title: Développement d'un site de Mairie facile à administrer et plaisant à u
 layout: projetlayout.html
 ---
 <h2>Développement d'un site de Mairie facile à administrer et plaisant à utiliser</h2>
-<div id="project-img-wrapper">
+<div class="project-img-wrapper">
     <a target="_blank" href="https://mairies.teotimepacreau.fr/"><img src="../../img/mairies-projet.png" loading="eager" width="600" height="300" alt="Vue de la page d'accueil du site de mairie"></a>
 </div>
 <h3>Rôle</h3>
@@ -20,25 +20,25 @@ layout: projetlayout.html
 </ul>
 
 <h3>Fonctionnalités</h3>
-<div id="project-img-wrapper">
+<div class="project-img-wrapper">
     <video width="603" height="339" controls muted src="../../img/mairies-showcase.mp4" title="Démonstration des fonctionnalités du site"></video>
 </div>
 <ol id="projet-ol">
     <li><strong>Responsive :</strong> adapté à la navigation sur mobile.</li>
     <li><strong>Administration simple & claire du site :</strong> permet à n'importe quelle personne de créer/modifier/supprimer toutes les pages</li>
-    <div id="project-img-wrapper">
+    <div class="project-img-wrapper">
         <video width="603" height="339" controls muted src="../../img/mairies-showcase.mp4" title="Création d'un article via TinaCMS et résultat sur le site"></video>
     </div>
     <li><strong>Recherche interne :</strong> tout le contenu du site est accessible via la barre de recherche.</li>
-    <div id="project-img-wrapper">
+    <div class="project-img-wrapper">
         <video width="603" height="339" controls muted src="../../img/mairies-pagefind.mp4" title="Requête via la barre de recherche interne"></video>
     </div>
     <li><strong>Amélioration de l'expérience utilisateur via la pagination :</strong> pour éviter d'afficher une trop longue liste d'actualités, j'ai fait appel au composant "Pagination" de la librairie <a target="_blank" href="https://ui.shadcn.com/">Shadcn-UI</a>.</li>
-    <div id="project-img-wrapper">
+    <div class="project-img-wrapper">
         <video width="603" height="339" controls muted src="../../img/mairies-pagination.mp4" title="Démonstration des fonctionnalités du site"></video>
     </div>
     <li><strong>Formulaire de contact :</strong> le formulaire adressé est transféré directement sur le mail de l'administrateur.</li>
-    <div id="project-img-wrapper">
+    <div class="project-img-wrapper">
         <video width="603" height="339" controls muted src="../../img/mairies-contactform.mp4" title="Remplissage du formulaire et envoi"></video>
     </div>
 </ol>
