maj(projet newsletter)

--- a/src/index.html
+++ b/src/index.html
@@ -163,8 +163,8 @@ title: Développement web et management de projets numériques à Nantes
                   </ul>
                   <div class="homepage-projets-grid-item__right__titleanddesc">
                     <span
-                      >Site web fullstack d'inscription et d'envoi de
-                      newsletter</span
+                      >Site web de
+                      newsletter & intégration HTML d'email</span
                     >
                   </div>
 
