--- a/src/projets/projets.html
+++ b/src/projets/projets.html
@@ -73,7 +73,7 @@ title: Mes projets numériques
               <h2 class="project-card-title">
                 <a href="projetnewsletter">"Feuillu", un site d'inscription et d'envoi de newsletter</a>
               </h2>
-              <p>Newsletter consacrée au web design. Développement d'email.</p>
+              <p>Développement du site web. Intégration d'email HTML responsive.</p>
             </main>
           </article>
         </div>
