--- a/src/projets/projetnewsletter/projetnewsletter.html
+++ b/src/projets/projetnewsletter/projetnewsletter.html
@@ -1,8 +1,8 @@
 ---
-title: Construction d'un site d'inscription et d'envoi de newsletter
+title: Développement d'un site d'inscription et d'envoi de newsletter. Intégration d'email HTML responsive
 layout: projetlayout.html
 ---
-<h2>Construction d'un site d'inscription et d'envoi de newsletter. Développement d'email.</h2>
+<h2>Développement d'un site de newsletter & intégration d'email HTML responsive.</h2>
 <div class="project-img-wrapper">
     <a target="_blank" href="https://feuillu-newsletter.teotimepacreau.fr/"><img src="../../img/newsletter.png" loading="eager" width="600" height="300" alt="Homepage of the newsletter subscription website : a bento UI with a subscription form aside"></a>
 </div>
@@ -10,30 +10,23 @@ layout: projetlayout.html
 <p>Développeur et designer du projet</p>
 
 <h3>Commande / Objectifs</h3>
-<p>Site d'inscription à une newsletter consacrée au web-design. Envoi d'un mail de bienvenue à l'inscription. Chaque mois, une édition de la newsletter est envoyée via une tâche automatisée. Les mails envoyés peuvent-être lus dans le client mail ou dans le navigateur. Il est possible de se désinscrire de la newsletter à tout moment.</p>
+<p>Création d'un site d'inscription et d'envoi d'une newsletter consacrée au web-design. Intégration d'email HTML responsive. Chaque mois, la newsletter est envoyée via une tâche automatisée. Les mails envoyés peuvent-être lus dans le client mail ou dans le navigateur. Il est possible de se désinscrire de la newsletter à tout moment.</p>
 <div class="project-img-wrapper">
-    <video width="603" height="339" controls muted src="../../img/newsletter-full.mp4" title="showcase of the functionalities of the newsletter website"></video>
+    <video width="603" height="339" controls muted src="../../img/newsletter-showcase.mp4" title="showcase of the functionalities of the newsletter website"></video>
 </div>
 <h3>Technologies utilisées</h3>
 <ul>
-    <li>Base de données SQLite et requêtes SQL</li>
-    <li>Express</li>
-    <li>NodeJS</li>
-    <li>HTML</li>
-    <li>CSS</li>
-    <li>Javascript</li>
+    <li>Backend : BDD SQLite et requêtes SQL, Express, NodeJS</li>
+    <li>Frontend : HTML, CSS, Javascript</li>
 </ul>
 <h3>Fonctionnalités</h3>
 <ol id="projet-ol">
     <li><strong>Logique de souscription :</strong> les utilisateurs s'inscrivent sur la page d'accueil en remplissant le formulaire. Les données sont enregistrées dans une base de données SQL. Une notification visuelle confirme la souscription à l'utilisateur, si l'email est déjà présent dans la BDD une notification visuelle informe de l'erreur. Un email de bienvenue est envoyé au nouvel inscrit.</li>
-    <div class="project-img-wrapper">
-        <video width="603" height="339" controls muted src="../../img/newsletter-subscribe.mp4" title="subscription function"></video>
-    </div>
     <li><strong>Logique de désinscription :</strong> les utilisateurs peuvent se désinscrire sur la page /unsubscribe. L'utilisateur entre son mail dans le formulaire de désinscription, la BDD se met à jour en conséquence. Une vérification s'opère avec une requête SQL pour vérifier si le mail est dans la BDD, si ce n'est pas le cas une notification visuelle informe l'utilisateur.</li>
+    <li><strong>UI :</strong> intégration HTML de l'email. Adaptation responsive mobile.</li>
     <div class="project-img-wrapper">
-        <video width="603" height="339" controls muted src="../../img/newsletter-unsubscribe.mp4" title="unsubscription function"></video>
+        <img src="../../img/email-html.png" alt="Rendu de l'email dans la boite mail : un bloc de bienvenue et un bloc montrant l'étude de cas">
     </div>
-    <li><strong>UI :</strong> conception du style "bento". Adaptation responsive mobile. Intégration d'une vidéo montrant le contenu de la newsletter sur la page d'accueil. Possible d'afficher les derniers sujets de la newsletter dans "Issues".</li>
     <li><strong>Composition dynamique de la newsletter :</strong> une requête SQL est effectuée dans la BDD pour personnaliser le prénom et le nom du destinataire.</li>
     <li><strong>Envoi régulier de la newsletter :</strong> un Node Cronjob automatise l'envoi par mail chaque mois.</li>
     <li><strong>Permettre au client d'afficher la newsletter dans son navigateur :</strong> une route Express prend en paramètre la requête pour savoir quel mail elle doit afficher.</li>
