fix(style on CV)

--- a/src/curriculum.html
+++ b/src/curriculum.html
@@ -264,8 +264,8 @@ title: CV de Téotime Pacreau
           </details>
         </section>
         
-        <section class="scolaire-titre">
-          <h1>Diplômes</h1>
+        <section aria-label="Mon parcours scolaire" id="diplomes-section">
+          <h2>Diplômes</h2>
         </section>
         <section class="scolaire-texte">
           <div class="card">
