--- a/src/curriculum.html
+++ b/src/curriculum.html
@@ -367,10 +367,10 @@ title: CV de Téotime Pacreau
           </ul>
         </section>
         <section class="certifications-titre">
-          <h1>Certifications</h1>
+          <h2>Certifications</h2>
         </section>
         <section class="travail">
-          <time class="travail-time">2023</time>
+          <time class="certif-time">2023</time>
           <div class="hr-parent"><hr /></div>
           <p class="travail-titre-poste">
             <a
@@ -382,7 +382,7 @@ title: CV de Téotime Pacreau
               Publique</a
             >
           </p>
-          <time class="travail-time">2023</time>
+          <time class="certif-time">2023</time>
           <div class="hr-parent"><hr /></div>
           <p class="travail-titre-poste">
             <a
@@ -393,7 +393,7 @@ title: CV de Téotime Pacreau
               la Direction Interministérielle de la Transformation Publique</a
             >
           </p>
-          <time class="travail-time">2023</time>
+          <time class="certif-time">2023</time>
           <div class="hr-parent"><hr /></div>
           <p class="travail-titre-poste">
             <a
@@ -403,7 +403,7 @@ title: CV de Téotime Pacreau
               >Formation "Animer un réseau"</a
             >
           </p>
-          <time class="travail-time">2023</time>
+          <time class="certif-time">2023</time>
           <div class="hr-parent"><hr /></div>
           <p class="travail-titre-poste">
             <a
@@ -413,7 +413,7 @@ title: CV de Téotime Pacreau
               >Formation UX UI (design numérique)</a
             >
           </p>
-          <time class="travail-time">2021</time>
+          <time class="certif-time">2021</time>
           <div class="hr-parent"><hr /></div>
           <p class="travail-titre-poste">
             <a
@@ -423,7 +423,7 @@ title: CV de Téotime Pacreau
               >Les bases du management de projet</a
             >
           </p>
-          <time class="travail-time">2021</time>
+          <time class="certif-time">2021</time>
           <div class="hr-parent"><hr /></div>
           <p class="travail-titre-poste">
             <a
@@ -433,7 +433,7 @@ title: CV de Téotime Pacreau
               >Google My Business</a
             >
           </p>
-          <time class="travail-time">2021</time>
+          <time class="certif-time">2021</time>
           <div class="hr-parent"><hr /></div>
           <p class="travail-titre-poste">
             <a
@@ -444,7 +444,7 @@ title: CV de Téotime Pacreau
               vérification : EZC 9XA BAR)</a
             >
           </p>
-          <time class="travail-time">2019</time>
+          <time class="certif-time">2019</time>
           <div class="hr-parent"><hr /></div>
           <p class="travail-titre-poste">
             <a
