--- a/src/colophon.html
+++ b/src/colophon.html
@@ -65,7 +65,7 @@ title: Indications sur la façon dont j'ai conçue mon site web
           <a class="rss" href="/feed/feed.xml"><i class="ph ph-rss"></i></a>
         </p>
       </main>
-      <footer id="footer" role="contentinfo">{% include "footer.html"%}</footer>
+      <footer id="footer">{% include "footer.html"%}</footer>
     </div>
     {% include "loadscripts.html"%}
   </body>
