--- a/src/curriculum.html
+++ b/src/curriculum.html
@@ -437,7 +437,7 @@ title: CV de Téotime Pacreau
           </p>
         </section>
       </main>
-      <footer id="footer" role="contentinfo">{% include "footer.html"%}</footer>
+      <footer id="footer">{% include "footer.html"%}</footer>
     </div>
     {% include "loadscripts.html"%}
     <script defer src="/scripts/displayWorkExp.js"></script>
