--- a/src/projets/projets.html
+++ b/src/projets/projets.html
@@ -40,12 +40,12 @@ title: Mes projets numériques
                 alt="page d'accueil de mon site de mairie"
               />
             </header>
-            <main class="project-descripter">
+            <div class="project-descripter">
               <h2 class="project-card-title">
                 <a href="projetmairies">Site de Mairie administrable par CMS</a>
               </h2>
               <p>Développeur du projet.</p>
-          </main>
+          </div>
           </article>
 
           <article class="project-card">
@@ -55,12 +55,12 @@ title: Mes projets numériques
                 alt="capture of the hompage of the bookshelf organizer website"
               />
             </header>
-            <main class="project-descripter">
+            <div class="project-descripter">
               <h2 class="project-card-title">
                 <a href="projetbookshelf">"The Bookshelf", un site de réservation de livres</a>
               </h2>
               <p>Développeur et designeur du projet.</p>
-          </main>
+          </div>
           </article>
           <article class="project-card">
             <header class="project-img-wrapper">
@@ -69,16 +69,16 @@ title: Mes projets numériques
                 alt="capture of the hompage of the newsletter subscription website"
               />
             </header>
-            <main class="project-descripter">
+            <div class="project-descripter">
               <h2 class="project-card-title">
                 <a href="projetnewsletter">"Feuillu", un site d'inscription et d'envoi de newsletter</a>
               </h2>
               <p>Développement du site web. Intégration d'email HTML responsive.</p>
-            </main>
+            </div>
           </article>
         </div>
       </main>
-      <footer id="footer" role="contentinfo">{% include "footer.html"%}</footer>
+      <footer id="footer">{% include "footer.html"%}</footer>
     </div>
     {% include "loadscripts.html"%}
   </body>
